--- a/app/views/songs/_form.html.erb
+++ b/app/views/songs/_form.html.erb
@@ -1,9 +1,8 @@
 <%= form_for @song  do |f| %>
   <%= f.label :title %>
   <%= f.text_field :title %><br>
-  <%= f.label :artist_name %>
-  <%= f.text_field :artist_name %>
+  <%= f.label :artist %>
   <br />
-
+  <%= artist_id_field(@song, @song.artist) %>
   <%= f.submit %>
 <% end %>
